@@ -2,26 +2,234 @@ package ti4.helpers.thundersedge;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import net.dv8tion.jda.api.components.buttons.Button;
 import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import org.apache.commons.lang3.StringUtils;
-import ti4.buttons.Buttons;
+import ti4.discord.interactions.buttons.Buttons;
+import ti4.discord.interactions.commands.tokens.AddTokenCommand;
+import ti4.discord.interactions.routing.ButtonHandler;
+import ti4.game.Game;
+import ti4.game.Planet;
+import ti4.game.Player;
+import ti4.game.Tile;
+import ti4.game.UnitHolder;
+import ti4.helpers.ActionCardHelper;
+import ti4.helpers.AliasHandler;
 import ti4.helpers.ButtonHelper;
+import ti4.helpers.ButtonHelperAgents;
+import ti4.helpers.Constants;
 import ti4.helpers.FoWHelper;
 import ti4.helpers.Helper;
 import ti4.helpers.PromissoryNoteHelper;
+import ti4.helpers.Units.UnitKey;
 import ti4.helpers.Units.UnitType;
 import ti4.image.Mapper;
-import ti4.listeners.annotations.ButtonHandler;
-import ti4.map.Game;
-import ti4.map.Player;
-import ti4.map.Tile;
 import ti4.message.MessageHelper;
+import ti4.model.BreakthroughModel;
 import ti4.model.SecretObjectiveModel;
+import ti4.model.UnitModel;
+import ti4.service.unit.ParsedUnit;
+import ti4.service.unit.RemoveUnitService;
 
-public class DSHelperBreakthroughs {
+public final class DSHelperBreakthroughs {
     // @ButtonHandler("componentActionRes_")
+
+    public static void dihmohnBTExhaust(Game game, Player p1) {
+        Tile tile = game.getTileByPosition(game.getActiveSystem());
+        AddTokenCommand.addToken(null, tile, Constants.FRONTIER, game);
+        MessageHelper.sendMessageToChannel(
+                p1.getCorrectChannel(), "Added a frontier token to " + tile.getRepresentationForButtons());
+    }
+
+    public static void cheiranBTExhaust(Game game, Player p1) {
+        String message = p1.getRepresentation() + ", please choose which system the ship you wish to replace is in.";
+        String finChecker = "FFCC_" + p1.getFaction() + "_";
+        List<Button> buttons = new ArrayList<>();
+        for (Map.Entry<String, Tile> tileEntry : new HashMap<>(game.getTileMap()).entrySet()) {
+            if (FoWHelper.playerHasShipsInSystem(p1, tileEntry.getValue())) {
+                Tile tile = tileEntry.getValue();
+                Button validTile = Buttons.green(
+                        finChecker + "cheiranBTIn_" + tileEntry.getKey(), tile.getRepresentationForButtons(game, p1));
+                buttons.add(validTile);
+            }
+        }
+        MessageHelper.sendMessageToChannelWithButtons(
+                p1.getCorrectChannel(), p1.getRepresentationUnfogged() + message, buttons);
+    }
+
+    @ButtonHandler("useVaylerianBT_")
+    public static void useVaylerianBT(ButtonInteractionEvent event, Player player, String buttonID, Game game) {
+        MessageHelper.sendMessageToChannel(
+                player.getCorrectChannel(),
+                player.getRepresentation()
+                        + " is discarding an action card to move 1 ship (possibly transporting) to an adjacent system containing no other players' ships.");
+        ButtonHelperAgents.moveShipToAdjacentSystemStep2(game, player, event, buttonID + "_hero");
+        MessageHelper.sendMessageToEventChannelWithEphemeralButtons(
+                event, "Discard an Action Card", ActionCardHelper.getDiscardActionCardButtons(player, false));
+    }
+
+    @ButtonHandler("cheiranBTIn_")
+    public static void cheiranBTIn(ButtonInteractionEvent event, Player player, String buttonID, Game game) {
+        String pos = buttonID.substring(buttonID.indexOf('_') + 1);
+        Tile tile = game.getTileByPosition(pos);
+        String finChecker = "FFCC_" + player.getFaction() + "_";
+        Set<UnitType> allowedUnits = Set.of(
+                UnitType.Destroyer,
+                UnitType.Cruiser,
+                UnitType.Carrier,
+                UnitType.Dreadnought,
+                UnitType.Flagship,
+                UnitType.Warsun);
+
+        List<Button> buttons = new ArrayList<>();
+        for (Map.Entry<String, UnitHolder> entry : tile.getUnitHolders().entrySet()) {
+            UnitHolder unitHolder = entry.getValue();
+            Map<UnitKey, Integer> units = unitHolder.getUnits();
+            if (unitHolder instanceof Planet) continue;
+
+            Map<UnitKey, Integer> tileUnits = new HashMap<>(units);
+            for (Map.Entry<UnitKey, Integer> unitEntry : tileUnits.entrySet()) {
+                UnitKey unitKey = unitEntry.getKey();
+                if (!player.unitBelongsToPlayer(unitKey)) continue;
+
+                if (!allowedUnits.contains(unitKey.getUnitType())) {
+                    continue;
+                }
+
+                UnitModel unitModel = player.getUnitFromUnitKey(unitKey);
+                String prettyName = unitModel == null ? unitKey.getUnitType().humanReadableName() : unitModel.getName();
+                String unitName = unitKey.unitName();
+                int totalUnits = unitEntry.getValue();
+                int damagedUnits = 0;
+
+                if (unitHolder.getUnitDamage() != null) {
+                    damagedUnits = unitHolder.getUnitDamage().getOrDefault(unitKey, 0);
+                }
+
+                for (int x = 1; x < damagedUnits + 1 && x < 2; x++) {
+                    String buttonID2 = finChecker + "cheiranBTOn_" + tile.getPosition() + "_" + unitName + "damaged";
+                    Button validTile2 = Buttons.red(buttonID2, "Remove A Damaged " + prettyName, unitKey.unitEmoji());
+                    buttons.add(validTile2);
+                }
+                totalUnits -= damagedUnits;
+                for (int x = 1; x < totalUnits + 1 && x < 2; x++) {
+                    Button validTile2 = Buttons.red(
+                            finChecker + "cheiranBTOn_" + tile.getPosition() + "_" + unitName,
+                            "Remove " + x + " " + prettyName,
+                            unitKey.unitEmoji());
+                    buttons.add(validTile2);
+                }
+            }
+        }
+        MessageHelper.sendMessageToChannelWithButtons(
+                event.getChannel(),
+                player.getRepresentationUnfogged() + ", please choose which unit you wish to replace.",
+                buttons);
+        ButtonHelper.deleteMessage(event);
+    }
+
+    @ButtonHandler("cheiranBTOn_")
+    public static void cheiranBTOn(ButtonInteractionEvent event, Player player, String buttonID, Game game) {
+        String pos = buttonID.split("_")[1];
+        String unit = buttonID.split("_")[2];
+        Tile tile = game.getTileByPosition(pos);
+        boolean damaged = false;
+        if (unit.contains("damaged")) {
+            unit = unit.replace("damaged", "");
+            damaged = true;
+        }
+        UnitKey unitKey = Mapper.getUnitKey(AliasHandler.resolveUnit(unit), player.getColor());
+        var parsedUnit = new ParsedUnit(unitKey);
+        RemoveUnitService.removeUnit(event, tile, game, parsedUnit, damaged);
+        String msg = "A " + (damaged ? "damaged " : "") + unitKey.unitEmoji() + " was removed by "
+                + player.getFactionEmoji()
+                + ". Units costing up to its cost can now be placed in the space area.";
+        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
+        List<Button> buttons =
+                Helper.getPlaceUnitButtons(event, player, game, game.getTileByPosition(pos), "solBtBuild", "place");
+        String message = player.getRepresentation() + ", use these buttons to place units. ";
+        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message, buttons);
+
+        ButtonHelper.deleteMessage(event);
+    }
+
+    @ButtonHandler("lizhoBtStep1")
+    public static void lizhoBtStep1(Game game, Player player, String buttonID, ButtonInteractionEvent event) {
+        ButtonHelper.deleteMessage(event);
+        List<Button> buttons = new ArrayList<>();
+        String planetName = buttonID.split("_")[1];
+        for (Tile tile : game.getTileMap().values()) {
+            for (UnitHolder uH : tile.getUnitHolders().values()) {
+                if (uH.getName().equalsIgnoreCase(planetName)) {
+                    continue;
+                }
+                if (uH.getUnitCount(UnitType.Infantry, player.getColor()) > 0) {
+                    if (uH instanceof Planet) {
+                        buttons.add(Buttons.green(
+                                "mercerMove_" + planetName + "_" + tile.getPosition() + "_" + uH.getName()
+                                        + "_infantry_lizhobt",
+                                "Move Infantry From " + Helper.getPlanetRepresentation(uH.getName(), game) + " to "
+                                        + Helper.getPlanetRepresentation(planetName, game)));
+                    } else {
+
+                        buttons.add(Buttons.green(
+                                "mercerMove_" + planetName + "_" + tile.getPosition() + "_" + uH.getName()
+                                        + "_infantry_lizhobt",
+                                "Move Infantry From Space of " + tile.getPosition() + " To "
+                                        + Helper.getPlanetRepresentation(planetName, game)));
+                    }
+                }
+            }
+        }
+        MessageHelper.sendMessageToChannel(
+                player.getCorrectChannel(), "Choose an infantry to move into coexistence.", buttons);
+    }
+
+    @ButtonHandler("readyBT")
+    public static void readyBT(Game game, Player p1, String buttonID, ButtonInteractionEvent event) {
+        ButtonHelper.deleteTheOneButton(event);
+        String btID = buttonID.split("_")[1];
+        BreakthroughModel btModel = Mapper.getBreakthrough(btID);
+        p1.getBreakthroughExhausted().put(btID, false);
+        String message = p1.getRepresentation() + " readied _" + btModel.getName() + "_.";
+        MessageHelper.sendMessageToChannelWithEmbed(p1.getCorrectChannel(), message, btModel.getRepresentationEmbed());
+        if ("dihmohnbt".equalsIgnoreCase(btID)) {
+            Tile tile = game.getTileByPosition(game.getActiveSystem());
+            if (tile != null) {
+                List<Button> buttons =
+                        Helper.getPlaceUnitButtons(event, p1, game, tile, "sling", "placeOneNDone_dontskip");
+                String message2 = p1.getRepresentation()
+                        + ", please use these buttons to produce 1 non-fighter ship\n> "
+                        + ButtonHelper.getListOfStuffAvailableToSpend(p1, game);
+                MessageHelper.sendMessageToChannel(
+                        event.getChannel(),
+                        p1.getFactionEmoji()
+                                + " is using _Exodus Engineering_ to produce 1 non-fighter ship (they may do this once per combat).");
+                MessageHelper.sendMessageToChannelWithButtons(event.getChannel(), message2, buttons);
+            }
+        }
+    }
+
+    @ButtonHandler("exhaustBT")
+    public static void exhaustBT(Game game, Player p1, String buttonID, ButtonInteractionEvent event) {
+        ButtonHelper.deleteTheOneButton(event);
+        String btID = buttonID.split("_")[1];
+        BreakthroughModel btModel = Mapper.getBreakthrough(btID);
+        p1.getBreakthroughExhausted().put(btID, true);
+        String message = p1.getRepresentation() + " exhausted _" + btModel.getName() + "_.";
+        MessageHelper.sendMessageToChannelWithEmbed(p1.getCorrectChannel(), message, btModel.getRepresentationEmbed());
+        boolean implemented = TeHelperBreakthroughs.handleBreakthroughExhaust(event, game, p1, buttonID);
+
+        if (!implemented) {
+            String unimplemented = "IDK how to do this yet. Please resolve manually.";
+            MessageHelper.sendMessageToChannel(event.getMessageChannel(), unimplemented);
+        }
+    }
+
     public static void edynBTStep1(Game game, Player p1) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayersExcludingThis(p1)) {
@@ -31,22 +239,22 @@ public class DSHelperBreakthroughs {
                     p2.getFactionEmojiOrColor()));
         }
         MessageHelper.sendMessageToChannelWithButtons(
-                p1.getCorrectChannel(), "Select a player to target with your breakthrough:", buttons);
+                p1.getCorrectChannel(), "Please choose a player to target with _Arms Brokerage_.", buttons);
     }
 
     public static void kolumeBTStep1(Game game, Player player) {
         List<Button> buttons = new ArrayList<>();
-        buttons.add(Buttons.green("gain_CC_deleteThisMessage", "Gain 1 CC"));
-        buttons.add(Buttons.gray("acquireATech_deleteThisMessage", "Research a Tech for 3i"));
+        buttons.add(Buttons.green("gain_CC_deleteThisMessage", "Gain 1 Command Token"));
+        buttons.add(Buttons.gray("acquireATech_deleteThisMessage", "Spend 3 Influence To Research A Technology"));
 
         MessageHelper.sendMessageToChannel(
                 player.getCorrectChannel(),
                 player.getRepresentation()
-                        + " is resolving the kolume breakthrough to either spend 3i to research 1 tech as the same color of one of their exhausted techs or gain 1 command token");
+                        + " is resolving _Synchronicity VI_, either to spend 3 influence to research 1 technology (that's the same colour as one of their exhausted technologies), or to or gain 1 command token.");
         MessageHelper.sendMessageToChannel(
                 player.getCorrectChannel(),
                 player.getRepresentation()
-                        + " choose whether you want to either spend 3i to research 1 tech as the same color of one of their exhausted techs or gain 1 command token",
+                        + ", please choose whether you are researching a technology or gaining a command token.",
                 buttons);
     }
 
@@ -58,7 +266,7 @@ public class DSHelperBreakthroughs {
             MessageHelper.sendMessageToChannelWithButtons(
                     p2.getCorrectChannel(),
                     p2.getRepresentationUnfogged() + ", " + p1.getFactionNameOrColor()
-                            + " has activated their Bentor breakthrough. Do you wish to explore one of your planets?",
+                            + " has _Historian Conclave_. This allows to to explore a planet you control. If you do, they will gain 1 commodity.",
                     buttons);
         }
         MessageHelper.sendMessageToChannel(p1.getCorrectChannel(), "Sent buttons to every player to resolve.");
@@ -67,10 +275,14 @@ public class DSHelperBreakthroughs {
     @ButtonHandler("acceptBentorBT")
     public static void acceptBentorBT(Game game, Player p1, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
+
         MessageHelper.sendMessageToChannel(
                 p2.getCorrectChannel(),
-                p2.getRepresentation() + " " + p1.getFactionNameOrColor()
-                        + " has accepted your breakthrough offer to explore one of their planets and you have been given 1 commodity (if possible).");
+                p2.getRepresentation() + ", your _Historian Conclave_ offer to " + p1.getFactionNameOrColor()
+                        + " has been accepted. "
+                        + (p2.getCommodities() >= p2.getCommoditiesTotal()
+                                ? "You would gain 1 commodity, but you are already at maximum commodities."
+                                : "You have gained 1 commodity."));
         p2.gainCommodities(1);
         List<Button> buttons = ButtonHelper.getButtonsToExploreAllPlanets(p1, game);
         ButtonHelper.deleteMessage(event);
@@ -84,9 +296,9 @@ public class DSHelperBreakthroughs {
         MessageHelper.sendMessageToChannel(
                 p1.getCorrectChannel(),
                 p1.getRepresentation()
-                        + " has used their Axis breakthrough to move any number of ships between two systems with their spacedocks.");
-        ButtonHelper.deleteTheOneButton(event);
-        String message = ", please choose the first system that you wish to swap a ship between (and transport).";
+                        + " has used _Arms Brokerage_ to move any number of ships between two systems with their space docks.");
+        ButtonHelper.deleteButtonAndDeleteMessageIfEmpty(event);
+        String message = ", please choose the first system that you wish to swap ships between (and transport).";
         List<Button> buttons = new ArrayList<>();
         List<Tile> tiles = ButtonHelper.getTilesOfPlayersSpecificUnits(game, p1, UnitType.Spacedock);
         for (Tile tile : tiles) {
@@ -107,8 +319,11 @@ public class DSHelperBreakthroughs {
         MessageHelper.sendMessageToChannel(
                 p1.getCorrectChannel(),
                 p1.getRepresentation()
-                        + " has used their Florzen breakthrough to choose another player and each simultaenously spend 0/1/2tgs. If they spend the same, Florzen gets a random PN.");
-        ButtonHelper.deleteTheOneButton(event);
+                        + " has used _Arms Brokerage_."
+                        + " They will choose another player, and both players will secretly choose to spend 0, 1, or 2 trade goods."
+                        + " If both players spent the same, the chosen player must give " + p1.getRepresentationNoPing()
+                        + " a random promissory note.");
+        ButtonHelper.deleteButtonAndDeleteMessageIfEmpty(event);
         String message = ", please choose the target player.";
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayersExcludingThis(p1)) {
@@ -127,7 +342,7 @@ public class DSHelperBreakthroughs {
         MessageHelper.sendMessageToChannel(
                 p1.getCorrectChannel(), p1.getRepresentation() + " has targeted " + p2.getRepresentation());
         ButtonHelper.deleteMessage(event);
-        String message = ", please choose the amount of tg you want to spend.";
+        String message = ", please choose the amount of trade goods you wish to spend.";
         List<Button> buttons = new ArrayList<>();
         for (int x = 0; x < 3 && x <= p1.getTg(); x++) {
             buttons.add(Buttons.gray(
@@ -143,14 +358,14 @@ public class DSHelperBreakthroughs {
         String originalBid = buttonID.split("_")[2];
         MessageHelper.sendMessageToChannel(
                 p1.getCorrectChannel(),
-                p1.getRepresentation() + " has chosen and buttons have been sent to " + p2.getRepresentation()
-                        + " for them to choose an amount.");
+                p1.getRepresentation() + " has locked in their trade goods, and buttons have been sent to "
+                        + p2.getRepresentation() + " for them to choose an amount of trade goods.");
         ButtonHelper.deleteMessage(event);
         String message = ", please choose the amount of tg you want to spend.";
         List<Button> buttons = new ArrayList<>();
         for (int x = 0; x < 3 && x <= p2.getTg(); x++) {
             buttons.add(Buttons.gray(
-                    p1.getFinsFactionCheckerPrefix() + "florzenBTStep4_" + p1.getFaction() + "_" + originalBid + "_"
+                    p2.getFinsFactionCheckerPrefix() + "florzenBTStep4_" + p1.getFaction() + "_" + originalBid + "_"
                             + x,
                     x + " tg"));
         }
@@ -162,22 +377,25 @@ public class DSHelperBreakthroughs {
     public static void florzenBTStep4(Game game, Player p1, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String originalBid = buttonID.split("_")[2];
-        String originalBid2 = buttonID.split("_")[3];
+        String originalBidFlorz = buttonID.split("_")[3];
         MessageHelper.sendMessageToChannel(
                 p1.getCorrectChannel(),
-                p1.getRepresentation() + " has chosen to spend " + originalBid2 + " tg and " + p2.getRepresentation()
-                        + " has chosen to spend " + originalBid + ". The tg have been subtracted");
+                p1.getRepresentation() + " has chosen to spend " + originalBidFlorz + " trade good"
+                        + ("1".equals(originalBidFlorz) ? "" : "s") + " and " + p2.getRepresentation()
+                        + " has chosen to spend " + originalBid + " trade good" + ("1".equals(originalBid) ? "" : "s")
+                        + ". These trade goods have been returned to the supply."
+                        + (originalBid.equalsIgnoreCase(originalBidFlorz)
+                                ? "\nAs both players spend the same number of trade goods, " + p1.getRepresentation()
+                                        + " has sent a random promissory note to " + p2.getRepresentation() + "."
+                                : ""));
         ButtonHelper.deleteMessage(event);
-        if (StringUtils.isNumeric(originalBid2) && Integer.parseInt(originalBid2) > 0) {
-            p1.setTg(p1.getTg() - Integer.parseInt(originalBid2));
+        if (StringUtils.isNumeric(originalBidFlorz) && Integer.parseInt(originalBidFlorz) > 0) {
+            p1.setTg(p1.getTg() - Integer.parseInt(originalBidFlorz));
         }
         if (StringUtils.isNumeric(originalBid) && Integer.parseInt(originalBid) > 0) {
             p2.setTg(p2.getTg() - Integer.parseInt(originalBid));
         }
-        if (originalBid.equalsIgnoreCase(originalBid2)) {
-            MessageHelper.sendMessageToChannel(
-                    p1.getCorrectChannel(),
-                    p1.getRepresentation() + " has sent a random PN to " + p2.getRepresentation());
+        if (originalBid.equalsIgnoreCase(originalBidFlorz)) {
             PromissoryNoteHelper.sendRandom(event, game, p1, p2);
         }
     }
@@ -187,11 +405,29 @@ public class DSHelperBreakthroughs {
         p1.setBreakthroughExhausted("lanefirbt", true);
         MessageHelper.sendMessageToChannel(
                 p1.getCorrectChannel(),
-                p1.getRepresentation() + " has used their Lanefir breakthrough to explore 1 planet they control.");
-        ButtonHelper.deleteTheOneButton(event);
+                p1.getRepresentation() + " has used _Erasure Corps_ to explore 1 planet they control.");
+        ButtonHelper.deleteButtonAndDeleteMessageIfEmpty(event);
         List<Button> buttons = ButtonHelper.getButtonsToExploreAllPlanets(p1, game);
         MessageHelper.sendMessageToChannelWithButtons(
                 event.getMessageChannel(), "Please choose which planet you wish to explore.", buttons);
+    }
+
+    @ButtonHandler("resolveMirvedaBT")
+    public static void resolveMirvedaBT(Game game, Player player, ButtonInteractionEvent event) {
+        String msg = player.getRepresentation() + ", you may use _Stabilization Arrays_ to land 1 PDS.";
+        List<Button> buttons = TeHelperAbilities.miniLandingButtons(game, player);
+        if (!buttons.isEmpty()) {
+            MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), msg, buttons);
+        }
+        ButtonHelper.deleteTheOneButton(event);
+    }
+
+    @ButtonHandler("readyLanefirBt")
+    public static void readyLanefirBt(Game game, Player player, ButtonInteractionEvent event) {
+        String msg = player.getRepresentation() + " readied their breakthrough.";
+        player.setBreakthroughExhausted("lanefirbt", false);
+        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
+        ButtonHelper.deleteMessage(event);
     }
 
     public static void doLanefirBtCheck(Game game, Player player) {
@@ -199,18 +435,19 @@ public class DSHelperBreakthroughs {
             if (p2.hasUnlockedBreakthrough("lanefirbt")) {
                 List<Button> buttons = new ArrayList<>();
                 if (p2.isBreakthroughExhausted("lanefirbt")) {
-                    buttons.add(Buttons.green("readyLanefirBt", "Ready Lanefir Breakthrough"));
+                    buttons.add(Buttons.green("readyLanefirBt", "Ready Erasure Corps"));
                 }
-                buttons.add(Buttons.green("gain_CC_deleteThisMessage", "Gain 1 CC"));
+                buttons.add(Buttons.green("gain_CC_deleteThisMessage", "Gain 1 Command Token"));
                 buttons.add(Buttons.red("deleteButtons", "Decline"));
                 MessageHelper.sendMessageToChannel(
                         p2.getCorrectChannel(),
-                        p2.getRepresentation()
-                                + " is resolving the lanefir breakthrough to either ready the breakthrough or gain 1 command token after another player has purged a non-action card component.");
+                        "Another player has purged a component (that isn't an action card). As such, "
+                                + p2.getRepresentation()
+                                + " is resolving _Erasure Corps_, either to ready the breakthrough, or to gain 1 command token.");
                 MessageHelper.sendMessageToChannel(
                         p2.getCorrectChannel(),
                         p2.getRepresentation()
-                                + " choose whether you want to either ready the breakthrough or gain 1 command token",
+                                + ", pleas choose whether you wish to ready _Erasure Corps_ or gain 1 command token.",
                         buttons);
             }
         }
@@ -220,7 +457,7 @@ public class DSHelperBreakthroughs {
     public static void axisBTStep2(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String pos = buttonID.split("_")[1];
         String message =
-                ", please choose the second system that you wish to swap a ship between (and transport). The first system is position "
+                ", please choose the second system that you wish to swap ships between (and transport). The first system is position "
                         + pos + ".";
         List<Button> buttons = new ArrayList<>();
         List<Tile> tiles = ButtonHelper.getTilesOfPlayersSpecificUnits(game, player, UnitType.Spacedock);
@@ -244,17 +481,20 @@ public class DSHelperBreakthroughs {
     public static void edynbtSelect(Game game, Player p1, ButtonInteractionEvent event, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
-        if (p1.getSecretsUnscored().size() > 0) {
-            for (String soID : p1.getSecretsUnscored().keySet()) {
+        Map<String, Integer> secretsUnscored = p1.getSecretsUnscored();
+        if (!secretsUnscored.isEmpty()) {
+            for (String soID : secretsUnscored.keySet()) {
                 buttons.add(Buttons.blue(
                         p1.getFinsFactionCheckerPrefix() + "edynbtTarget_" + p2.getFaction() + "_" + soID,
                         Mapper.getSecretObjective(soID).getName()));
             }
-            MessageHelper.sendMessageToEventChannelWithEphemeralButtons(event, "Choose a secret to show.", buttons);
+            MessageHelper.sendMessageToEventChannelWithEphemeralButtons(
+                    event, "Choose a secret objective to show.", buttons);
             ButtonHelper.deleteMessage(event);
         } else {
             MessageHelper.sendMessageToChannel(
-                    p1.getCorrectChannel(), "Sent buttons to " + p2.getFactionNameOrColor() + "'s channel to resolve.");
+                    p1.getCorrectChannel(),
+                    "Sent " + p2.getFactionNameOrColor() + " resolution buttons in their `#cards-info` channel.");
             edynbtTarget(game, p1, event, "edynbtTarget_" + p2.getFaction() + "_none");
         }
     }
@@ -266,23 +506,24 @@ public class DSHelperBreakthroughs {
         SecretObjectiveModel so = Mapper.getSecretObjective(buttonID.split("_")[2]);
         if (so != null) {
             MessageHelper.sendMessageToChannel(
-                    p1.getCorrectChannel(),
+                    p1.getCardsInfoThread(),
                     "You have shown " + so.getName() + " to " + p2.getFactionNameOrColor() + ".");
             MessageHelper.sendMessageToChannelWithEmbed(
                     p2.getCardsInfoThread(),
                     p1.getFactionNameOrColor() + " has shown you the secret objective: " + so.getName() + ".",
                     so.getRepresentationEmbed());
         }
-        if (p2.getSecretsUnscored().size() > 0) {
+        if (!p2.getSecretsUnscored().isEmpty()) {
             buttons.add(Buttons.green(
                     "edynbtFinal_showSecret_" + p1.getFaction(),
-                    "Show Random Secret Objective to " + p2.getFactionNameOrColor()));
+                    "Show Random Secret Objective to " + p1.getFactionNameOrColor()));
         }
         buttons.add(Buttons.blue(
-                "edynbtFinal_noShowSecret_" + p1.getFaction(), "Allow Coexistence to " + p2.getFactionNameOrColor()));
+                "edynbtFinal_noShowSecret_" + p1.getFaction(), "Allow Coexistence to " + p1.getFactionNameOrColor()));
         MessageHelper.sendMessageToChannel(
                 p2.getCorrectChannel(),
-                "Choose whether to show a secret objective to " + p2.getFactionNameOrColor() + " or allow coexistence.",
+                p2.getRepresentation() + " , please choose whether to show a secret objective to "
+                        + p1.getFactionNameOrColor() + " or to allow coexistence.",
                 buttons);
         ButtonHelper.deleteMessage(event);
     }
@@ -294,7 +535,7 @@ public class DSHelperBreakthroughs {
         if ("showSecret".equals(action)) {
             List<String> unscoredSOs = new ArrayList<>(p1.getSecretsUnscored().keySet());
             Collections.shuffle(unscoredSOs);
-            String randomSOID = unscoredSOs.get(0);
+            String randomSOID = unscoredSOs.getFirst();
             SecretObjectiveModel so = Mapper.getSecretObjective(randomSOID);
             if (so != null) {
                 MessageHelper.sendMessageToChannelWithEmbed(
@@ -303,7 +544,7 @@ public class DSHelperBreakthroughs {
                                 + " has shown you the secret objective: " + so.getName() + ".",
                         so.getRepresentationEmbed());
                 MessageHelper.sendMessageToChannel(
-                        p1.getCorrectChannel(), p2.getFactionNameOrColor() + " was shown a random secret objective..");
+                        p1.getCorrectChannel(), p2.getFactionNameOrColor() + " was shown a random secret objective.");
             } else {
                 MessageHelper.sendMessageToChannel(
                         p1.getCorrectChannel(), p1.getFactionNameOrColor() + " has no unscored secret objectives.");
@@ -318,10 +559,7 @@ public class DSHelperBreakthroughs {
             Player player = p2;
             for (String planet : target.getPlanetsAllianceMode()) {
                 if (game.getUnitHolderFromPlanet(planet) != null
-                        && game.getUnitHolderFromPlanet(planet).hasGroundForces(target)
-                        && !ButtonHelper.getPlanetExplorationButtons(
-                                        game, game.getUnitHolderFromPlanet(planet), player, false, true)
-                                .isEmpty()) {
+                        && game.getUnitHolderFromPlanet(planet).hasGroundForces(target)) {
                     buttons.add(Buttons.gray(
                             player.getFinsFactionCheckerPrefix() + "exchangeProgramPart3_" + planet,
                             Helper.getPlanetRepresentation(planet, game)));
